--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alien Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="canvas1"></canvas>
+
+    <!--  characters  -->
+    <!--  props  -->
+    <!--  environment  -->
+    <img id="layer1" src="assets/layer1.png"/>
+    <img id="layer2" src="assets/layer2.png"/>
+    <img id="layer3" src="assets/layer3.png"/>
+    <img id="layer4" src="assets/layer4.png"/>
+
     <script src="script.js"></script>
 </body>
 </html>
