--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <canvas id="canvas1"></canvas>
 
     <!--  characters  -->
+    <img id="player" src="assets/player.png"/>
     <!--  props  -->
     <!--  environment  -->
     <img id="layer1" src="assets/layer1.png"/>
