--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
     <!--  characters  -->
     <img id="player" src="assets/player.png"/>
+    <img id="angler1" src="assets/angler1.png"/>
+    <img id="angler2" src="assets/angler2.png"/>
+    <img id="lucky" src="assets/lucky.png"/>
     <!--  props  -->
+    <img id="projectile" src="assets/projectile.png"/>
     <!--  environment  -->
     <img id="layer1" src="assets/layer1.png"/>
     <img id="layer2" src="assets/layer2.png"/>
